Fixed the weird alignment on the col (output) of the aggregate node.

--- a/frontend/src/components/Nodes/nodes.css
+++ b/frontend/src/components/Nodes/nodes.css
@@ -70,7 +70,6 @@
     p { 
         width: 100%;
         text-align: center;
-        max-width: none;
     }
 }
 
