--- a/frontend/src/components/Nodes/tableNode.css
+++ b/frontend/src/components/Nodes/tableNode.css
@@ -17,4 +17,8 @@
     strong {
         color: #F4A259;
     }
+
+    .attributes.single-col p {
+        max_width: 40ch;
+    }
 }
